항공편 마이크로서비스 구현

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
-version: "3.4"
+version: '3.4'
 
 services:
-  ms-nodebootstrap-example:
-    container_name: ms-nodebootstrap-example
+  ms-flights:
+    container_name: ms-flights
     user: root # avoids ton of volume mounting headaches in dev mode.
     build:
       context: .
@@ -12,11 +12,11 @@ services:
       # @see: http://jdlm.info/articles/2016/03/06/lessons-building-node-app-docker.html#the-node_modules-volume-trick
       - /opt/app/node_modules
     ports:
-      - 5501:5501
+      - 7507:5501
     env_file:
       - ./database.env
     links:
-      - ms-nodebootstrap-example-db
+      - ms-flights-db
     environment:
       - NODE_ENV=dev
       - NODE_HOT_RELOAD=1
@@ -25,11 +25,11 @@ services:
       #- PORT=5501 # this is overriden in shell/start-dev.sh since wait-for.sh compromises it from here
     # command: nodemon -e js,coffee,jade,handlebars server.js
     # @see: https://docs.docker.com/compose/startup-order/
-    # command: ["./shell/wait-for.sh", "ms-nodebootstrap-example-db:3306", "--", "./shell/start-dev.sh"]
-    command: ./shell/wait-for.sh ms-nodebootstrap-example-db:3306 -- ./shell/start-dev.sh
+    # command: ["./shell/wait-for.sh", "ms-flights-db:3306", "--", "./shell/start-dev.sh"]
+    command: ./shell/wait-for.sh ms-flights-db:3306 -- ./shell/start-dev.sh
 
-  ms-nodebootstrap-example-db:
-    container_name: ms-nodebootstrap-example-db
+  ms-flights-db:
+    container_name: ms-flights-db
     image: mysql:5.7
     # port mapping not needed for the app, but convenient in debugging
     # to use some GUI tool (e.g. SequelPro) against the DB, on the host
